ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request_Line_Item__c/Payment_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Payment Request Line Item</label>
    <nameField>
        <displayFormat>PRLI-{00000}</displayFormat>
        <label>Payment Request Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>