ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request_Line_Item__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <label>Item Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>