ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request_Line_Item__c/fields/Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request__c</fullName>
    <label>Payment Request</label>
    <referenceTo>Payment_Request__c</referenceTo>
    <relationshipLabel>Payment Request Line Items</relationshipLabel>
    <relationshipName>Payment_Request_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>