ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request_Line_Item__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>RL</fullName>
            </value>
            <value>
                <fullName>SH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>